--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "echo Start watching... && npx babel --watch src --out-dir ./build --presets react-app/prod"
+    "watch": "echo Start watching... && npx babel --watch src --out-dir ./build --presets react-app/prod",
+    "minify": "terser build/js/app.js --compress --output build/minified/js/app.min.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "terser": "^4.1.2"
   }
 }
