--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "watch": "echo Start watching... && npx babel --watch src --out-dir ./build --presets react-app/prod",
-    "minify": "terser build/js/app.js --compress --output build/minified/js/app.min.js"
+    "minify": "terser build/js/app.js --compress --output build/minified/js/app.min.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "babel-preset-react-app": "^3.1.2",
     "express": "^4.17.1",
     "terser": "^4.1.2"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
