--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "babel-cli": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "express": "^4.17.1",
-    "terser": "^4.1.2"
+    "terser": "^4.1.2",
+    "watchify": "^3.11.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babelify": "^10.0.0",
     "jest": "^24.8.0"
   }
 }
