Added Jest Test for TileData

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "concurrently \"npm run watch-babel\" \"npm run watch-browserify\"",
+    "watch": "concurrently \"npm run -s watch-babel\" \"npm run -s watch-browserify\"",
     "watch-babel": "echo Start watching (Babel/JSX)... && npx babel --watch src --out-dir ./build --presets react-app/prod",
     "watch-browserify": "echo Start watching (Watchify/Browserify)... && watchify ./build/js/app.js -v --dg -o ./build/js/app_deploy.js",
-    "minify": "terser build/js/app.js --compress --output build/minified/js/app.min.js",
+    "minify": "terser build/js/app_deploy.js --compress --output build/minified/js/app_deploy.min.js",
     "test": "jest"
   },
   "keywords": [],
