--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^24.8.0",
     "babel-preset-react-app": "^3.1.2",
     "express": "^4.17.1",
     "terser": "^4.1.2",
@@ -24,6 +27,7 @@
     "babel-core": "^6.26.3",
     "babelify": "^10.0.0",
     "concurrently": "^4.1.1",
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "react-test-renderer": "^16.8.6"
   }
 }
