--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "jest-environment-enzyme": "^7.1.0",
     "jest-enzyme": "^7.1.0",
+    "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "terser": "^4.1.2",
@@ -37,7 +38,9 @@
     "react-test-renderer": "^16.8.6"
   },
   "jest": {
-    "setupFilesAfterEnv": ["jest-enzyme"],
+    "setupFilesAfterEnv": [
+      "jest-enzyme"
+    ],
     "testEnvironment": "enzyme"
   }
 }
