--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "watchify": "^3.11.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.10.1",
     "babel-core": "^6.26.3",
     "babelify": "^10.0.0",
     "concurrently": "^4.1.1",
