--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "stylelint": "^10.1.0",
     "terser": "^4.1.2",
     "watchify": "^3.11.1"
   },
