--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "jest-environment-enzyme": "^7.1.0",
     "jest-enzyme": "^7.1.0",
+    "jquery": "^3.4.1",
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
