--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "babel-cli": "^6.26.0",
     "babel-jest": "^24.8.0",
     "babel-preset-react-app": "^3.1.2",
+    "browserify": "^16.5.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "express": "^4.17.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-less": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.5",
     "jest-environment-enzyme": "^7.1.0",
     "jest-enzyme": "^7.1.0",
     "jquery": "^3.4.1",
@@ -29,6 +34,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "terser": "^4.1.2",
+    "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.11.1"
   },
   "devDependencies": {
@@ -36,6 +42,9 @@
     "babel-core": "^6.26.3",
     "babelify": "^10.0.0",
     "concurrently": "^4.1.1",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-terser": "^1.2.0",
     "jest": "^24.8.0",
     "react-test-renderer": "^16.8.6"
   },
